--- a/style.css
+++ b/style.css
@@ -36,3 +36,40 @@ Template: astra
 
 /* your code starts here 👇 */
 
+.has-white-color {
+  color:#FFFFFF;
+}
+.has-white-background-color {
+    background-color:#FFFFFF;
+}
+.has-black-color {
+  color:#000000;
+}
+.has-black-background-color {
+    background-color:#000000;
+}
+.has-carbon-color {
+  color:#4A4A4A;
+}
+.has-carbon-background-color {
+    background-color:#4A4A4A;
+}
+.has-caramel-color {
+  color:#8B572A;
+}
+.has-caramel-background-color {
+    background-color:#8B572A;
+}
+.has-capucinno-color {
+  color:#B09F82;
+}
+.has-capucinno-background-color {
+    background-color:#B09F82;
+}
+.has-vanilla-color {
+  color:#EBE5D9;
+}
+.has-vanilla-background-color {
+    background-color:#EBE5D9;
+}
+
